ChangeLog
=========

0.7.0rc3
    * Added new flat struct for filesystem, old one is renamed to legacy

0.7.0rc2(2022-11-30)
    * Camera support
        - Autodetection
        - Resolution changing
        - Trigger schemes for time and layer based values
        - Camera ordering preparation
        - Config saving, loading and updating
    * Fix priority commands (RESET_PRINTER)
    * Remove PREPARED, use only READY and IDLE
    * Shorten the request timeout from 30 to 10 seconds

0.7.0rc1 (2022-9-13)
    * IDLE / READY states correction
    * Improve error callbacks
    * File and Folder name validation
    * Registration headers update
    * Create directory function does nothing if folder already exists
    * get_free_space() replaced by get_space_info(), added total size info
    * Make on the fly download throttling possible
    * Add mesh bed levelling event
    * Added command_id to telemetry, if there's a command in progress
    * 4xx responses handling change
    * Add sheet settings and mbl data
    * Add Transfer ID as a 64-bit int
    * Added new SET_PRINTER_READY / CANCEL_PRINTER_READY cmds
    * Inotify fix - handling nested files
    * Introduce a new conditions system
    * Added StorageType enum to const
    * TRANSFER_INFO improvement
    * Make downloads from connect time out after 30s of inactivity
    * Send state in every Event


0.6.0 (2021-12-17)
    * Introduce `const.State.PREPARED`
    * remove m_time from file structure
    * telemetry method use self.state instead of argument state
    * Filesystem can mount directory to root
    * Fixed last_updated value for nested files
    * Added LOAD/UNLOAD filament constants
    * Added TransferInfo class and TransferType contants
    * Changed DOWNLOAD constants to TRANSFER
    * Download object replaced by Transfer object
    * Refactor of Transfer object, added reset method
    * Implementation of START_URL_DOWNLOAD and START_CONNECT_DOWNLOAD commands